infra/k8s/core-banking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-banking-service
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: core-banking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: core-banking-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: core-banking-service
    spec:
      containers:
        - name: core-banking-service
          image: banking-lab/core-banking-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
