infra/k8s/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: payment-service
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: banking-lab
        app.kubernetes.io/name: payment-service
    spec:
      containers:
        - name: payment-service
          image: banking-lab/payment-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8088
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 768Mi
