infra/k8s/core-banking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-banking-service
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: core-banking-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: core-banking-service
  ports:
    - name: http
      port: 8081
      targetPort: http
