infra/k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: banking-lab
        app.kubernetes.io/name: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0
          args: ["start-dev", "--health-enabled=true", "--metrics-enabled=true"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9000
              name: management
          readinessProbe:
            httpGet:
              path: /health/ready
              port: management
            initialDelaySeconds: 45
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: management
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: keycloak
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: management
      port: 9000
      targetPort: management
