infra/k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: notification-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notification-service
  ports:
    - name: http
      port: 8089
      targetPort: http
