infra/k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: payment-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: payment-service
  ports:
    - name: http
      port: 8088
      targetPort: http
