infra/k8s/reporting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    app.kubernetes.io/name: reporting-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: reporting-service
  ports:
    - name: http
      port: 8090
      targetPort: http
