infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-lab-ingress
  namespace: banking-lab
  labels:
    app.kubernetes.io/part-of: banking-lab
    banking-lab/synthetic-only: "true"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - banking-lab.local
        - auth.banking-lab.local
        - reports.banking-lab.local
        - payments.banking-lab.local
        - notifications.banking-lab.local
      secretName: banking-lab-ingress-tls
  rules:
    - host: banking-lab.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: core-banking-service
                port:
                  number: 8081
    - host: auth.banking-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: reports.banking-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reporting-service
                port:
                  number: 8090
    - host: payments.banking-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8088
    - host: notifications.banking-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8089
